fix aside overflow

--- a/src/css/dash/_aside.scss
+++ b/src/css/dash/_aside.scss
@@ -8,7 +8,7 @@
 .siftal #sidebar figure:hover .avatar:before{border-color:transparent #fff}
 .siftal #sidebar figure .avatar:after{font-family:"siftal";content:"\e05f";position:absolute;top:0;bottom:0;right:0;left:0;text-align:center;line-height:90px;font-size:2em;border-radius:50%;color:#fff;opacity:0;transition:0.3s;margin:5px;}
 .siftal #sidebar figure:hover .avatar:after{background-color:rgba(0,0,0,0.3);opacity:1}
-.siftal #sidebar figure .avatar img{display:block;max-width:100%;height:100%;padding:.5em;border-radius:50%;margin:0 auto;width:100%;}
+.siftal #sidebar figure .avatar img{display:block;max-width:100%;height:100%;padding:.5em;border-radius:50%;margin:0 auto;width:100%;overflow:hidden}
 .siftal #sidebar figure figcaption{max-width:100%;margin:0 auto;padding:1em 0}
 .siftal #sidebar .menu{overflow-y:auto;}
 /*responsive sidebar*/
